minor fix with navbar overflow-x

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ nav .topbar {
   justify-content: space-between;
   position: fixed;
   padding: 0 1rem;
-  width: 100vw;
+  width: 100%;
   height: 20px;
   line-height: 20px;
   background-color: #4387EA;
@@ -34,7 +34,7 @@ nav .navbar {
   position: fixed;
   display: flex;
   top: 20px;
-  width: 100vw;
+  width: 100%;
   padding: 0 1rem;
   height: 60px;
   line-height: 60px;
@@ -176,6 +176,18 @@ nav .navbar .sidenav__items {
   }
 }
 
+/* Footer */
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+  footer.navbar.is-brand.is-fixed-bottom .fa-angle-up {
+    margin-left: calc(50vw - 50%);
+  }
+}
+@media only screen and (min-width: 1024px) {
+  footer.navbar.is-brand.is-fixed-bottom .fa-angle-up {
+    margin-left: calc(50vw - 50%);
+  }
+}
+
 .info .info__img {
   padding: 0;
 }
@@ -241,7 +253,6 @@ footer.navbar.is-brand.is-fixed-bottom .fa-angle-up {
   text-align: center;
   line-height: 30px;
   font-size: 2rem;
-  margin-left: calc(50vw - 50%);
 }
 
 /*# sourceMappingURL=style.css.map */
