--- a/assets/sass/_navbar.scss
+++ b/assets/sass/_navbar.scss
@@ -11,7 +11,7 @@ nav {
 	    justify-content: space-between;
 	    position: fixed;
  	    padding: 0 1rem;
-	    width: 100vw;
+	    width: 100%;
 	    height: 20px;
 	    line-height: 20px;
 	    background-color: $azul-logo--claro;
@@ -39,7 +39,7 @@ nav {
 	    position: fixed;
 	    display: flex;
 	    top: 20px;
-	    width: 100vw;
+	    width: 100%;
 	    padding: 0 1rem;
 	    height: 60px;
 	    line-height: 60px;
@@ -225,5 +225,30 @@ nav {
                 }
             }
         }
+    }
+}
+
+/* Footer */
+footer.navbar.is-brand.is-fixed-bottom {
+
+
+    .fa-angle-up {
+    	@include mobile-layout {
+             
+        }
+
+        @include mobile-landscape {
+           
+        }
+
+        @include tablet-layout {
+          	margin-left: calc(50vw - 50%);
+        }
+
+
+    	@include desktop-layout {
+        	margin-left: calc(50vw - 50%);
+        }
+        
     }
 }
